[package]
name = "pallet-beefy"
version = "17.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/paritytech/substrate"
description = "BEEFY FRAME pallet"
homepage = "https://substrate.io"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.136", optional = true }
beefy-primitives = { version = "15.0.0", default-features = false, path = "../../primitives/beefy", package = "sp-beefy" }
frame-support = { version = "17.0.0", default-features = false, path = "../support" }
frame-system = { version = "17.0.0", default-features = false, path = "../system" }
pallet-authorship = { version = "17.0.0", default-features = false, path = "../authorship" }
pallet-session = { version = "17.0.0", default-features = false, path = "../session" }
sp-runtime = { version = "19.0.0", default-features = false, path = "../../primitives/runtime" }
sp-session = { version = "16.0.0", default-features = false, path = "../../primitives/session" }
sp-staking = { version = "15.0.0", default-features = false, path = "../../primitives/staking" }
sp-std = { version = "6.0.0", default-features = false, path = "../../primitives/std" }

[dev-dependencies]
frame-election-provider-support = { version = "17.0.0", path = "../election-provider-support" }
pallet-balances = { version = "17.0.0", path = "../balances" }
pallet-offences = { version = "16.0.0", path = "../offences" }
pallet-staking = { version = "17.0.0", path = "../staking" }
pallet-staking-reward-curve = { version = "4.0.0", path = "../staking/reward-curve" }
pallet-timestamp = { version = "16.0.0", path = "../timestamp" }
sp-core = { version = "17.0.0", path = "../../primitives/core" }
sp-io = { version = "18.0.0", path = "../../primitives/io" }
sp-staking = { version = "15.0.0", path = "../../primitives/staking" }

[features]
default = ["std"]
std = [
	"beefy-primitives/std",
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-authorship/std",
	"pallet-session/std",
	"scale-info/std",
	"serde",
	"sp-runtime/std",
	"sp-session/std",
	"sp-staking/std",
	"sp-std/std",
]
try-runtime = ["frame-support/try-runtime"]
