[package]
name = "substrate-frame-cli"
version = "21.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "cli interface for FRAME"
documentation = "https://docs.rs/substrate-frame-cli"
readme = "README.md"

[dependencies]
clap = { version = "4.0.9", features = ["derive"] }
frame-support = { version = "17.0.0", path = "../../../frame/support" }
frame-system = { version = "17.0.0", path = "../../../frame/system" }
sc-cli = { version = "0.25.0", path = "../../../client/cli" }
sp-core = { version = "17.0.0", path = "../../../primitives/core" }
sp-runtime = { version = "19.0.0", path = "../../../primitives/runtime" }

[features]
default = []
